Improve resource loading