@@ -1,16 +1,19 @@
 package org.fao.geonet.schemas;
 
-import java.net.URISyntaxException;
+import java.net.URL;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 public class TestSupport {
 
-    public static Path getResource(String name) throws URISyntaxException {
-        return Paths.get(TestSupport.class.getClassLoader().getResource(name).toURI());
+    public static Path getResource(String name) {
+        URL resource = TestSupport.class.getClassLoader().getResource(name);
+        if (resource == null) {
+            throw new IllegalArgumentException("Resource not found: " + name);
+        }
+        return Path.of(resource.getPath());
     }
 
-    public static Path getResourceInsideSchema(String pathToResourceInsideSchema) throws URISyntaxException {
+    public static Path getResourceInsideSchema(String pathToResourceInsideSchema) {
         return getResource("gn-site/WEB-INF/data/config/schema_plugins/iso19139.che/" + pathToResourceInsideSchema);
     }
 }
